--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>English Time Zhetisay - Ағылшын тілі курсы</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Geologica:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 <body>
     <div class="video-background">
         <video autoplay muted loop playsinline id="bg-video">
-            <source src="video/background_video.mp4" type="video/mp4">
+            <source src="background_video.mp4" type="video/mp4">
             <!-- Fallback text if video doesn't load -->
             Your browser does not support HTML5 video.
         </video>
@@ -29,7 +29,7 @@
     <div class="container">
         <header>
             <div class="logo-container">
-                <img src="images/logo.png" alt="English Time Jetisay логотипі" id="logo">
+                <img src="logo.png" alt="English Time Jetisay логотипі" id="logo">
                 <div>
                     <h1>English Time Zhetisay</h1>
                     <p>Ағылшын тілін үйренуге арналған курстар</p>
@@ -121,7 +121,7 @@
                 <h2>Біздің оқытушы</h2>
                 <div class="teacher-container">
                     <div class="teacher-photo">
-                        <img src="images/gaba.jpg" alt="Оқытушы портреті">
+                        <img src="gaba.jpg" alt="Оқытушы портреті">
                     </div>
                     <div class="teacher-details">
                         <h3>Ғабит Махатов</h3>
@@ -185,7 +185,7 @@
                 <div class="swiper-wrapper">
 
                     <div class="swiper-slide">
-                    <img src="images/жания ашимова.jpg" />
+                    <img src="жания ашимова.jpg" />
                     <h3>Жания Ашимова</h3>
                     <p>IELTS: 7.0</p>
                     <p>FLEX Alumni 2022</p>
@@ -193,7 +193,7 @@
                     </div>
 
                     <div class="swiper-slide">
-                    <img src="images/жания  досан.jpg" />
+                    <img src="жания  досан.jpg" />
                     <h3>Жания Досан</h3>
                     <p>Ағылшын тілінен республикалық олимпиада қатысушысы</p>
                     </div>
@@ -220,13 +220,13 @@
             <p>&copy; 2025 English Time Jetisay</p>
             <div class="social-icons">
                 <a href="https://instagram.com/englishzhet/" class="social-icon instagram" target="_blank">
-                    <img src="images/instagram.png" alt="instagram">
+                    <img src="instagram.png" alt="instagram">
                 </a>
                 <a href="https://wa.me/77078684369" class="social-icon whatsapp" target="_blank">
-                    <img src="images/whatsapp.png" alt="whatsApp">
+                    <img src="whatsapp.png" alt="whatsApp">
                 </a>
                 <a href="https://www.google.com/maps/@40.7758747,68.3262272,3a,75y,18.35h,89.55t/data=!3m7!1e1!3m5!1sze3fY53kLINOT_guh--bBQ!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D0.44693289454323804%26panoid%3Dze3fY53kLINOT_guh--bBQ%26yaw%3D18.353195416115906!7i16384!8i8192?entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D" class="social-icon location" target="_blank">
-                    <img src="images/location.png" alt="location">
+                    <img src="location.png" alt="location">
                 </a>
             </div>
             <br>
@@ -237,6 +237,6 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
