--- a/ielts.html
+++ b/ielts.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
   <!-- Твой общий стиль -->
-  <link rel="stylesheet" href="css/ielts_style.css" />
+  <link rel="stylesheet" href="ielts_style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Geologica:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -30,27 +30,27 @@
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <img src="images/dossan_zhaniya_65.png" alt="Айгерим сертификат">
+        <img src="dossan_zhaniya_65.png" alt="Айгерим сертификат">
         <h4>Досан Жания</h4>
       </div>
 
       <div class="swiper-slide">
-        <img src="images/kabylbek_ayaulym_60.png" alt="Мирас сертификат">
+        <img src="kabylbek_ayaulym_60.png" alt="Мирас сертификат">
         <h4>Қабылбек Аяулым</h4>
       </div>
 
       <div class="swiper-slide">
-        <img src="images/ashimova_zhaniya_70.png" alt="Жания сертификат">
+        <img src="ashimova_zhaniya_70.png" alt="Жания сертификат">
         <h4>Жания Ашимова</h4>
       </div>
 
       <div class="swiper-slide">
-        <img src="images/kongyrbay_nazerke_65.png" alt="Айдана сертификат">
+        <img src="kongyrbay_nazerke_65.png" alt="Айдана сертификат">
         <h4>Қоңғырбай Назерке</h4>
       </div>
 
       <div class="swiper-slide">
-        <img src="images/kenes_madina_60.png" alt="Гүлназ сертификат">
+        <img src="kenes_madina_60.png" alt="Гүлназ сертификат">
         <h4>Кеңес Мадина</h4>
       </div>
 
