--- a/ielts.html
+++ b/ielts.html
@@ -30,27 +30,27 @@
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <img src="dossan_zhaniya_65.png" alt="Айгерим сертификат">
+        <img src="dossan_zhaniya_65.png" alt="Айгерим сертификат" loading="lazy">
         <h4>Досан Жания</h4>
       </div>
 
       <div class="swiper-slide">
-        <img src="kabylbek_ayaulym_60.png" alt="Мирас сертификат">
+        <img src="kabylbek_ayaulym_60.png" alt="Мирас сертификат" loading="lazy">
         <h4>Қабылбек Аяулым</h4>
       </div>
 
       <div class="swiper-slide">
-        <img src="ashimova_zhaniya_70.png" alt="Жания сертификат">
+        <img src="ashimova_zhaniya_70.png" alt="Жания сертификат" loading="lazy">
         <h4>Жания Ашимова</h4>
       </div>
 
       <div class="swiper-slide">
-        <img src="kongyrbay_nazerke_65.png" alt="Айдана сертификат">
+        <img src="kongyrbay_nazerke_65.png" alt="Айдана сертификат" loading="lazy">
         <h4>Қоңғырбай Назерке</h4>
       </div>
 
       <div class="swiper-slide">
-        <img src="kenes_madina_60.png" alt="Гүлназ сертификат">
+        <img src="kenes_madina_60.png" alt="Гүлназ сертификат" loading="lazy">
         <h4>Кеңес Мадина</h4>
       </div>
 
