--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="video-background">
         <video autoplay muted loop playsinline id="bg-video">
-            <source src="background_video.mp4" type="video/mp4">
+            <source src="background_video.mp4" type="video/mp4" loading="lazy">
             <!-- Fallback text if video doesn't load -->
             Your browser does not support HTML5 video.
         </video>
@@ -29,7 +29,7 @@
     <div class="container">
         <header>
             <div class="logo-container">
-                <img src="logo.png" alt="English Time Jetisay логотипі" id="logo">
+                <img src="logo.png" alt="English Time Jetisay логотипі" id="logo" loading="lazy">
                 <div>
                     <h1>English Time Zhetisay</h1>
                     <p>Ағылшын тілін үйренуге арналған курстар</p>
@@ -121,7 +121,7 @@
                 <h2>Біздің оқытушы</h2>
                 <div class="teacher-container">
                     <div class="teacher-photo">
-                        <img src="gaba.jpg" alt="Оқытушы портреті">
+                        <img src="gaba.jpg" alt="Оқытушы портреті" loading="lazy">
                     </div>
                     <div class="teacher-details">
                         <h3>Ғабит Махатов</h3>
@@ -185,7 +185,7 @@
                 <div class="swiper-wrapper">
 
                     <div class="swiper-slide">
-                    <img src="жания ашимова.jpg" />
+                    <img src="жания ашимова.jpg" loading="lazy" />
                     <h3>Жания Ашимова</h3>
                     <p>IELTS: 7.0</p>
                     <p>FLEX Alumni 2022</p>
@@ -193,19 +193,19 @@
                     </div>
 
                     <div class="swiper-slide">
-                    <img src="жания  досан.jpg" />
+                    <img src="жания  досан.jpg" loading="lazy" />
                     <h3>Жания Досан</h3>
                     <p>Ағылшын тілінен республикалық олимпиада қатысушысы</p>
                     </div>
 
                     <div class="swiper-slide">
-                    <img src="https://placekitten.com/202/200" />
+                    <img src="https://placekitten.com/202/200" loading="lazy" />
                     <h3>Оқушы 3</h3>
                     <p>Жетістіктер 3</p>
                     </div>
 
                    <div class="swiper-slide">
-                    <img src="https://placekitten.com/202/200" />
+                    <img src="https://placekitten.com/202/200" loading="lazy" />
                     <h3>Оқушы 4</h3>
                     <p>Жетістіктер 4</p>
                     </div>
@@ -220,13 +220,13 @@
             <p>&copy; 2025 English Time Jetisay</p>
             <div class="social-icons">
                 <a href="https://instagram.com/englishzhet/" class="social-icon instagram" target="_blank">
-                    <img src="instagram.png" alt="instagram">
+                    <img src="instagram.png" alt="instagram" loading="lazy">
                 </a>
                 <a href="https://wa.me/77078684369" class="social-icon whatsapp" target="_blank">
-                    <img src="whatsapp.png" alt="whatsApp">
+                    <img src="whatsapp.png" alt="whatsApp" loading="lazy">
                 </a>
                 <a href="https://www.google.com/maps/@40.7758747,68.3262272,3a,75y,18.35h,89.55t/data=!3m7!1e1!3m5!1sze3fY53kLINOT_guh--bBQ!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D0.44693289454323804%26panoid%3Dze3fY53kLINOT_guh--bBQ%26yaw%3D18.353195416115906!7i16384!8i8192?entry=ttu&g_ep=EgoyMDI1MDYxMS4wIKXMDSoASAFQAw%3D%3D" class="social-icon location" target="_blank">
-                    <img src="location.png" alt="location">
+                    <img src="location.png" alt="location" loading="lazy">
                 </a>
             </div>
             <br>
