--- a/flex.html
+++ b/flex.html
@@ -26,6 +26,13 @@
             </div>
         </header>
    </div>
+  <nav class="navbar">
+  <ul class="nav-links">
+    <li><a href="index.html">Басты бет</a></li>
+    <li><a href="ielts.html">IELTS</a></li>
+    <li><a href="graduates.html">Түлектер</a></li>
+  </ul>
+</nav>
 <section class="swiper mySwiper">
   <div class="swiper-wrapper">
 
