--- a/ielts.html
+++ b/ielts.html
@@ -25,6 +25,13 @@
             </div>
         </header>
    </div>
+  <nav class="navbar">
+  <ul class="nav-links">
+    <li><a href="index.html">Басты бет</a></li>
+    <li><a href="flex.html">FLEX</a></li>
+    <li><a href="graduates.html">Түлектер</a></li>
+  </ul>
+</nav>
   <br>
   <h3 class="swipe-hint">👉 Свайптаңыз →</h3>
   <div class="swiper mySwiper">
