--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <h2>Оқушылардың жетістіктері</h2>
                 <div class="achievements-grid">
                     
-                    <a href="ielts.html" class="achievement-item" target="_blank">
+                    <a href="ielts.html" class="achievement-item" >
                     <div class="achievement-icon">
                         <i class="fas fa-medal"></i>
                     </div>
@@ -151,7 +151,7 @@
                     <p>Оқушыларымыз орташа балы: 6.0</p>
                     </a>
 
-                    <a href="flex.html" class="achievement-item" target="_blank">
+                    <a href="flex.html" class="achievement-item" >
                     <div class="achievement-icon">
                         <i class="fas fa-trophy"></i>
                     </div>
@@ -169,7 +169,7 @@
                     <p>Орташа балл: 45/50</p>
                     </div>
 
-                    <a href="graduates.html" class="achievement-item" target="_blank">
+                    <a href="graduates.html" class="achievement-item" >
                     <div class="achievement-icon">
                         <i class="fas fa-users"></i>
                     </div>
