--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
         <header>
             <div class="logo-container">
                 <img src="logo.png" alt="English Time Jetisay логотипі" id="logo" loading="lazy">
-                <div>
-                    <h1>English Time Zhetisay</h1>
-                    <p>Ағылшын тілін үйренуге арналған курстар</p>
+                <div class="header-text">
+                    <div>English</div>
+                    <div>Time</div>
+                    <div>Zhetisay</div>
                 </div>
             </div>
         </header>
