--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="logo-container">
                 <img src="logo.png" alt="English Time Jetisay логотипі" id="logo" loading="lazy">
                 <div class="header-text">
-                    <div>English</div>
-                    <div>Time</div>
-                    <div>Zhetisay</div>
+                    <h1>English</h1><br>
+                    <h1>Time</h1><br>
+                    <h1>Zhetisay</h1>
                 </div>
             </div>
         </header>
