--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <div class="logo-container">
                 <img src="logo.png" alt="English Time Jetisay логотипі" id="logo" loading="lazy">
                 <div class="header-text">
-                    <h2>English</h2><br>
-                    <h2>Time</h2><br>
+                    <h2>English</h2>
+                    <h2>Time</h2>
                     <h2>Zhetisay</h2>
                 </div>
             </div>
