--- a/index.html
+++ b/index.html
@@ -242,5 +242,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
+    <div class="popup">Өтінішіңіз сәтті жіберілді!</div>
 </body>
 </html>
