--- a/flex.html
+++ b/flex.html
@@ -43,13 +43,13 @@
   <div class="swiper-wrapper">
 
     <!-- Slide 1 -->
-    <div class="swiper-slide student-slide" style="background-image: url('bg1_backg.jpg');">
+    <div class="swiper-slide student-slide" style="background-image: url('zhaniya_background.jpg');">
       <div class="overlay"></div>
       <div class="slide-content">
         <img src="bg1_main.jpg" alt="Aruzhan" class="student-photo">
         <div class="student-info">
-          <h2>Aruzhan</h2>
-          <p>FLEX 2023 — Wichita, USA</p>
+          <h2>Досан Жания</h2>
+          <p>FLEX Alumni 2022 — El Paso High School, USA</p>
           <blockquote>“This journey changed my life forever.”</blockquote>
           <br>
           <br>
