--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="video-background">
         <video autoplay muted loop playsinline id="bg-video">
-            <source src="background_video.mp4" type="video/mp4" loading="lazy">
+            <source src="back_video1.mp4" type="video/mp4" loading="lazy">
             <!-- Fallback text if video doesn't load -->
             Your browser does not support HTML5 video.
         </video>
